# ice-cream-dataops

./: README.md  cdf.toml  pyproject.toml
.github/workflows/: deploy.yaml
cog-siglek/: build_info.dev.yaml  config.prod.yaml  config.test.yaml
cog-siglek/function_local_venvs/icapi_datapoints_extractor/local_code/: handler.py
cog-siglek/modules/Session1/data_models/: rmdm.Space.yaml
cog-siglek/modules/Session1/data_models/containers/: EquipmentClass.Container.yaml  rmdm_FailureMechanism.Container.yaml  rmdm_FileExt.Container.yaml  rmdm_Operation.Container.yaml
cog-siglek/modules/Session1/data_models/views/: FailureCause.View.yaml  FailureMode.View.yaml  FailureNotification.View.yaml  FileExt.View.yaml  Notification.View.yaml  Operation.View.yaml
cog-siglek/modules/Session2/data_models/: RMDM.DataModel.yaml
cog-siglek/modules/Session2/data_models/containers/: rmdm_EquipmentClass.Container.yaml  rmdm_EquipmentType.Container.yaml  rmdm_FailureCause.Container.yaml  rmdm_FailureMode.Container.yaml  (+2 more)
ice-cream-dataops/: config.dev.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/function_local_venvs/icapi_datapoints_extractor/: run_check.py
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/Session1/data_models/: RMDM.DataModel.yaml
ice-cream-dataops/modules/Session2/data_models/: rmdm_instance.Space.yaml
rmdm_support/notebooks/: FilesExt_RMDM.ipynb  TS_datapoints_ingestion.ipynb
src/: delete_dm_views_containers_rmdm.py  get_client.py  queries.ipynb
tests/: test_creds.py
(+117 files in other folders)
